Fix Alignment 	modified:   wdd-130/poas/index.html 	modified:   wdd-130/poas/styles/animation_pages.css

--- a/wdd-130/poas/styles/animation_pages.css
+++ b/wdd-130/poas/styles/animation_pages.css
@@ -2,7 +2,7 @@
 
 #container {
   display: grid;
-  grid-template-columns: 0.3fr 0.3fr 0.3fr 0.3fr 0.3fr;
+  grid-template-columns: 1fr 0.3fr 0.3fr 0.3fr 1fr;
   grid-template-rows: .7fr 1fr 0.2fr;
 }
 
